# zer0lint

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
_launch/: LAUNCH-PLAN.md  SHIP-REPORT.md  claim.md  classification.md  gh-metadata.sh  hygiene-report.md  positioning.md  preship-gate.md  proposed-edits.md  release.sh
_launch/distribution/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
_launch/distribution/.github/workflows/: release.yml  test.yml
_launch/images/: architecture.mmd  demo-plan.md  prompts.md
_launch/outreach/: README-outreach.md  blog-post.devto.md  blog-post.md  hn-show.md  linkedin.md  x-thread.md
_launch/outreach/awesome-prs/: awesome-cli-apps.md  awesome-python.md
_launch/outreach/reddit/: r-LocalLLaMA.md  r-Python.md
_launch/paper/: DECISION.md
assets/: preview-source.txt  preview-spec.md
tests/: test_sampler.py  test_tester.py
zer0lint/: __init__.py  analyzer.py  cli.py  fixer.py  orchestrator.py  scanner.py  tester.py
