[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zer0lint"
version = "0.2.1"
description = "AI memory extraction diagnostics — works with mem0 or any HTTP memory endpoint. By Hermes Labs."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Rolando Bosch", email = "rbosch@lpci.ai"},
]
maintainers = [
    {name = "Hermes Labs", email = "roli@hermes-labs.ai"},
]
keywords = [
    "ai", "agents", "memory", "mem0", "extraction", "diagnostics",
    "llm", "ollama", "retrieval", "vector-store",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://hermes-labs.ai"
Repository = "https://github.com/roli-lpci/zer0lint"
Documentation = "https://github.com/roli-lpci/zer0lint#readme"
Issues = "https://github.com/roli-lpci/zer0lint/issues"
Organization = "https://hermes-labs.ai"

[project.optional-dependencies]
mem0 = ["mem0ai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
zer0lint = "zer0lint.cli:app"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
