[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zer0lint"
version = "0.2.1"
description = "Memory extraction diagnostics for mem0 configs and HTTP memory endpoints."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Rolando Bosch", email = "rbosch@lpci.ai"},
]
maintainers = [
    {name = "Rolando Bosch"},
]
keywords = [
    "memory-diagnostics", "extraction-health", "mem0", "http-memory",
    "agent-memory", "llm", "retrieval", "fail-fast",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/hermes-labs-ai/zer0lint"
Repository = "https://github.com/hermes-labs-ai/zer0lint"
Documentation = "https://github.com/hermes-labs-ai/zer0lint#readme"
Issues = "https://github.com/hermes-labs-ai/zer0lint/issues"

[project.optional-dependencies]
mem0 = ["mem0ai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
zer0lint = "zer0lint.cli:app"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
